--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>repl.it</title>
-    <h2> "Test"</h2>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Migos Fan Site</title>
+</head>
+
+<body>
+    <!-- Header -->
+    <header>
+        <ul>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#media">Media</a></li>
+            <li><a href="#merch">Merch</a></li>
+        </ul>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="hero">
+        <h1>Welcome to the Migos World</h1>
+        <p>The culture, the vibe, the legacy.</p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Migos</h2>
+        <p>Migos, the iconic Atlanta-based hip-hop trio of Offset, Quavo, and Takeoff...</p>
+    </section>
+
+    <!-- Media Section -->
+    <section id="media">
+        <h2>Media</h2>
+        <p>Relive iconic moments with Migos.</p>
+    </section>
+
+    <!-- Merch Section -->
+    <section id="merch">
+        <h2>Merchandise</h2>
+        <p>Shop exclusive Migos merchandise!</p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Migos Fan Site. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
