--- a/index.html
+++ b/index.html
@@ -5,44 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migos Fan Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
+        }
+
+        header ul {
+            list-style: none;
+            display: flex;
+            justify-content: space-around;
+            padding: 0;
+        }
+
+        header ul li {
+            display: inline;
+        }
+
+        header ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background: #fff;
+        }
+
+        footer {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Same HTML structure as Stage 1 -->
     <header>
         <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#media">Media</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#member-info">Details</a></li>
             <li><a href="#merch">Merch</a></li>
         </ul>
     </header>
 
-    <!-- Hero Section -->
     <section id="hero">
         <h1>Welcome to the Migos World</h1>
         <p>The culture, the vibe, the legacy.</p>
     </section>
 
-    <!-- About Section -->
     <section id="about">
         <h2>About Migos</h2>
         <p>Migos, the iconic Atlanta-based hip-hop trio of Offset, Quavo, and Takeoff...</p>
     </section>
 
-    <!-- Media Section -->
     <section id="media">
         <h2>Media</h2>
         <p>Relive iconic moments with Migos.</p>
     </section>
 
-    <!-- Merch Section -->
+    <section id="events">
+        <h2>Events</h2>
+        <ul>
+            <li><strong>The Culture Tour:</strong> Jan 10, 2025 - Atlanta, GA</li>
+        </ul>
+    </section>
+
+    <section id="member-info">
+        <h2>Member Details</h2>
+        <div>
+            <h3>Offset</h3>
+            <p>Known for his intricate flows and ad-libs...</p>
+        </div>
+        <div>
+            <h3>Quavo</h3>
+            <p>The melodic genius and the group's frontman.</p>
+        </div>
+        <div>
+            <h3>Takeoff</h3>
+            <p>The lyrical powerhouse with a smooth delivery.</p>
+        </div>
+    </section>
+
     <section id="merch">
         <h2>Merchandise</h2>
         <p>Shop exclusive Migos merchandise!</p>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Migos Fan Site. All rights reserved.</p>
     </footer>
