--- a/index.html
+++ b/index.html
@@ -6,86 +6,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migos Fan Site</title>
     <style>
-        /* General Styling */
+        /* Body Styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
         }
 
+        /* Header Styling */
         header {
-            background-color: #333;
-            color: white;
-            padding: 15px;
-            text-align: center;
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
         }
 
         header ul {
             list-style: none;
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
             padding: 0;
-            margin: 0;
         }
 
         header ul li {
-            margin: 0 15px;
+            display: inline;
         }
 
         header ul li a {
-            color: white;
+            color: #fff;
             text-decoration: none;
-            font-size: 18px;
+            padding: 5px 10px;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         header ul li a:hover {
-            text-decoration: underline;
+            background-color: #ffcc00;
+            color: #000;
+            transform: scale(1.1);
         }
 
+        /* Section Styling */
         section {
             padding: 20px;
             margin: 20px;
             border: 1px solid #ddd;
-            border-radius: 8px;
-            background: white;
+            border-radius: 5px;
+            background: #fff;
         }
 
+        /* Hero Section */
         #hero {
-            background-color: #222;
-            color: white;
             text-align: center;
-            padding: 40px;
+            background: #333;
+            color: #fff;
+            padding: 50px 20px;
+            border: none;
+            margin: 0 20px 20px;
+            border-radius: 10px;
         }
 
-        #hero h1 {
-            font-size: 36px;
+        /* About Section */
+        #about {
+            text-align: center;
         }
 
-        #hero p {
-            font-size: 18px;
+        /* Media Section */
+        #media img {
+            width: 100%;
+            max-width: 300px;
+            margin: 10px;
+            border-radius: 10px;
+            transition: transform 0.3s;
         }
 
-        #about h2, #media h2, #events h2, #member-info h2, #merch h2 {
-            color: #555;
+        #media img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
+        /* Events Section */
+        #events ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        #events ul li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            transition: background-color 0.3s;
+        }
+
+        #events ul li:hover {
+            background-color: #f9f9f9;
+        }
+
+        /* Member Details Section */
+        #member-info div {
+            border: 1px solid #ddd;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            transition: box-shadow 0.3s;
+        }
+
+        #member-info div:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Footer Styling */
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #000;
+            color: #fff;
             text-align: center;
-            padding: 15px 0;
-        }
-
-        footer p {
-            margin: 0;
+            padding: 10px 0;
+            margin-top: 20px;
         }
     </style>
 </head>
 
 <body>
-    <!-- Header -->
     <header>
         <ul>
             <li><a href="#hero">Home</a></li>
@@ -97,33 +137,32 @@
         </ul>
     </header>
 
-    <!-- Hero Section -->
     <section id="hero">
         <h1>Welcome to the Migos World</h1>
         <p>The culture, the vibe, the legacy.</p>
     </section>
 
-    <!-- About Section -->
     <section id="about">
         <h2>About Migos</h2>
         <p>Migos, the iconic Atlanta-based hip-hop trio of Offset, Quavo, and Takeoff...</p>
     </section>
 
-    <!-- Media Section -->
     <section id="media">
         <h2>Media</h2>
         <p>Relive iconic moments with Migos.</p>
+        <img src="https://via.placeholder.com/300x200" alt="Migos 1">
+        <img src="https://via.placeholder.com/300x200" alt="Migos 2">
+        <img src="https://via.placeholder.com/300x200" alt="Migos 3">
     </section>
 
-    <!-- Events Section -->
     <section id="events">
         <h2>Events</h2>
         <ul>
             <li><strong>The Culture Tour:</strong> Jan 10, 2025 - Atlanta, GA</li>
+            <li><strong>Live in LA:</strong> Feb 5, 2025 - Los Angeles, CA</li>
         </ul>
     </section>
 
-    <!-- Member Info Section -->
     <section id="member-info">
         <h2>Member Details</h2>
         <div>
@@ -140,12 +179,6 @@
         </div>
     </section>
 
-    <!-- Merch Section -->
-    <section id="merch">
-        <h2>Merchandise</h2>
-    </section>
-
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Migos Fan Site. All rights reserved.</p>
     </footer>
