--- a/index.html
+++ b/index.html
@@ -11,33 +11,38 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #121212;
+            color: #fff;
             scroll-behavior: smooth;
         }
 
         /* Header Styling */
         header {
             background-color: #000;
-            color: #fff;
-            padding: 10px 20px;
+            padding: 15px 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
         }
 
         header ul {
             list-style: none;
             display: flex;
-            justify-content: space-around;
+            gap: 30px;
             padding: 0;
-        }
-
-        header ul li {
-            display: inline;
+            margin: 0;
         }
 
         header ul li a {
             color: #fff;
             text-decoration: none;
-            padding: 5px 10px;
+            font-size: 1.2em;
+            font-weight: bold;
+            padding: 8px 15px;
             transition: background-color 0.3s, transform 0.3s;
         }
 
@@ -47,64 +52,120 @@
             transform: scale(1.1);
         }
 
-        /* Section Styling */
-        section {
-            padding: 20px;
-            margin: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background: #fff;
-        }
-
         /* Hero Section */
         #hero {
             text-align: center;
-            background: #333;
+            background: 
             color: #fff;
-            padding: 50px 20px;
-            margin: 0 20px 20px;
-            border-radius: 10px;
+            height: 70vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* About Section */
-        #about {
+        #hero-video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+        }
+
+        .hero-content h1 {
+            font-family: 'Bebas Neue', sans-serif;
+            font-size: 90px;
+            color: #ffcc00;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+            margin-bottom: 20px;
+        }
+
+        .hero-content p {
+            font-family:'Bebas Neue', sans-serif;
+            margin-bottom: 50px;
+            font-size: 35px;
+            color: #e0e0e0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            font-weight: 300
+        }
+
+        .btn {
+            margin-top: 20px;
+            padding: 10px 25px;
+            font-size: 1.2em;
+            background: #ffcc00;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: transform 0.3s, background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #e6b800;
+            transform: scale(1.1);
+        }
+
+        /* Section Styling */
+        section {
+            padding: 50px 20px;
             text-align: center;
+        }
+
+        section h2 {
+            font-size: 3em;
+            color: #ffcc00;
+            margin-bottom: 20px;
+        }
+
+        section p {
+            font-size: 1.2em;
+            color: #ccc;
         }
 
         /* Media Section */
         #media {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
             gap: 20px;
+            justify-content: center;
         }
 
         #media img {
-            width: 100%;
             max-width: 300px;
             border-radius: 10px;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         #media img:hover {
-            transform: scale(1.1);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(255, 204, 0, 0.7);
         }
 
         /* Events Section */
         #events ul {
             list-style: none;
             padding: 0;
+            margin: 0 auto;
+            max-width: 600px;
         }
 
         #events ul li {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            transition: background-color 0.3s;
+            background: #222;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            transition: transform 0.3s, background-color 0.3s;
         }
 
         #events ul li:hover {
-            background-color: #f9f9f9;
+            background-color: #ffcc00;
+            transform: scale(1.05);
         }
 
         /* Member Details Section */
@@ -115,82 +176,83 @@
         }
 
         #member-info div {
+            background: #222;
             padding: 20px;
-            border: 1px solid #ddd;
             border-radius: 10px;
-            background: #f9f9f9;
-            text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
+            text-align: center;
         }
 
         #member-info div:hover {
             transform: scale(1.05);
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 6px 12px rgba(255, 204, 0, 0.7);
         }
 
         /* Merch Section */
-        #merch {
-            text-align: center;
-        }
-
         .merch-items {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
             gap: 20px;
+            justify-content: center;
         }
 
         .merch-item {
-            background: #fff;
-            border: 2px solid #ddd;
+            background: #333;
+            border: 2px solid #444;
             border-radius: 10px;
             padding: 20px;
+            max-width: 300px;
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .merch-item:hover {
             transform: scale(1.1);
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 6px 12px rgba(255, 204, 0, 0.7);
         }
 
         .merch-item img {
-            width: 100%;
-            max-width: 300px;
+            max-width: 100%;
             border-radius: 10px;
         }
 
         .merch-item h3 {
-            margin: 15px 0 10px;
-            color: #333;
+            margin: 15px 0;
+            color: #ffcc00;
         }
 
         .merch-item p {
-            margin-bottom: 10px;
-            font-size: 14px;
-            color: #555;
+            color: #ccc;
         }
 
         .merch-item .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #ffcc00;
-            color: #000;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .merch-item .btn:hover {
-            background: #e6b800;
+            margin-top: 10px;
         }
 
         /* Footer Styling */
         footer {
             background-color: #000;
             color: #fff;
-            text-align: center;
             padding: 20px 0;
+            text-align: center;
+        }
+
+        footer .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        footer .social-links a {
+            color: #ffcc00;
+            font-size: 1.2em;
+            text-decoration: none;
+            transition: color 0.3s, transform 0.3s;
+        }
+
+        footer .social-links a:hover {
+            color: #fff;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -208,13 +270,22 @@
     </header>
 
     <section id="hero">
-        <h1>Welcome to the Migos World</h1>
-        <p>The culture, the vibe, the legacy.</p>
+        <video autoplay loop muted playsinline id="hero-video">
+            <source src="Migos.mp4" type="video/mp4">
+        </video>
+        <div class="hero-content">
+            <h1>Welcome to the Migos World</h1>
+            <p>The culture, the vibe, the legacy.</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
     </section>
+
+    <!-- About Section -->
+
 
     <section id="about">
         <h2>About Migos</h2>
-        <p>Migos, the iconic Atlanta-based hip-hop trio of Offset, Quavo, and Takeoff...</p>
+        <p>Migos, the iconic Atlanta-based hip-hop trio of Offset, Quavo, and Takeoff revolutionized the trap genre with their signature triplet flow...</p>
     </section>
 
     <section id="media">
@@ -252,20 +323,24 @@
         <h2>Merchandise</h2>
         <div class="merch-items">
             <div class="merch-item">
-                <img src="https://images.stockx.com/images/Migos-Migos-Three-Vintage-Hoodie-Washed-Black.jpg?fit=fill&bg=FFFFFF&w=480&h=320&q=60&dpr=1&trim=color&updated_at=1623716552" alt="Migos Merch">
-                <h3>Migos Merch</h3>
-                <a class="btn" href="#">Buy Now</a>
+                <img src="https://images.stockx.com/images/Migos-Migos-Three-Vintage-Hoodie-Washed-Black.jpg" alt="Migos Hoodie">
+                <h3>Migos Hoodie</h3>
+                <a class="btn" href="https://stockx.com/migos-migos-three-vintage-hoodie-washed-black" target="_blank">Buy Now</a>
             </div>
             <div class="merch-item">
-                <img src="https://images.stockx.com/images/Migos-Migos-Three-Vintage-Hoodie-Washed-Black.jpg?fit=fill&bg=FFFFFF&w=480&h=320&q=60&dpr=1&trim=color&updated_at=1623716552" alt="Migos Merch">
-                <h3>Migos Merch</h3>
-                <a class="btn" href="#">Buy Now</a>
+                <img src="https://images.stockx.com/images/Migos-Migos-Three-Vintage-Hoodie-Washed-Black.jpg" alt="Migos Hoodie">
+                <h3>Migos Hoodie</h3>
+                <a class="btn" href="https://stockx.com/migos-migos-three-vintage-hoodie-washed-black" target="_blank">Buy Now</a>
             </div>
         </div>
     </section>
 
     <footer>
         <p>&copy; 2024 Migos Fan Site. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://www.instagram.com/migos/?hl=en" target="_blank">Instagram</a>
+            <a href="https://www.youtube.com/@Migosatl" target="_blank">YouTube</a>
+        </div>
     </footer>
 </body>
 
